# talk-is-deep

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
data/: load-from-scratch.sh  prepare.py  readme.md  requirements.txt  run-qdrant.sh
data/api/: check_similarity.py  get_disimilar_abstract.py  server.py
inference/vllm/: vllm.py
logic/: extract-tag-content.ts  get-dissimilar-abstract.ts  get-self-similarity.ts  get-values.ts
prompts/: -1-base.ts  0-start-pair.ts  1-flaw-and-correction-pair.ts  10-systems-thinking-pair.ts  11-convergent-thinking.ts  12-divergent-thinking.ts  13-abductive-reasoning.ts  14-historical-context.ts  15-challenge-fundamentals.ts  16-real-world-applications.ts  17-extreme-misunderstanding.ts  18-pure-continuation.ts  19-lesson-on-methods.ts  2-analogy-pair.ts  20-closing-pair.ts  3-counterfactual-reasoning-pair.ts  4-hyperspecific-deepening-pair.ts  5-dialectical-thinking-pair.ts  6-probabalistic-thinking.ts  7-causal-reasoning-pair.ts  8-lateral-thinking-pair.ts  9-reclarify-something-pair.ts  all-prompt-pairs.ts
vllm/: vllm.py  vllm.ts
